Decomposition Algorithm is only missing isothetic thickness computation
all other parts are done and tested. missing is also a final test of all
parts working together