@@ -19,61 +19,95 @@ public class MelkmanDeque<T>
     //insert(v) -> addFirst(v)
     //remove() -> removeFirst()
 
-    private LinkedList<T> _container;
+    private LinkedList<T> _deque;
 
     public MelkmanDeque()
     {
-        _container = new LinkedList<>();
+        _deque = new LinkedList<>();
     }
 
+    /**
+     * Add element to the end of the deque
+     * @param e
+     */
     public void push(T e)
     {
-        _container.addLast(e);
+        _deque.addLast(e);
     }
 
+    /**
+     * Add element to the beginning of deque
+     * @param e
+     */
     public void insert(T e)
     {
-        _container.addFirst(e);
+        _deque.addFirst(e);
     }
     
+    /**
+     * remove the last element in deque
+     */
     public void pop()
     {
-        _container.removeLast();
+        _deque.removeLast();
     }
     
+    /**
+     * remove first element in deque
+     */
     public void remove()
     {
-        _container.removeFirst();
+        _deque.removeFirst();
     }
 
     public List<T> asList()
     {
-        return new ArrayList<>(_container);
+        return new ArrayList<>(_deque);
     }
 
     public T get_b()
     {
-        return _container.get(0);
+        return _deque.get(0);
     }
 
     public T get_b_plus1()
     {
-        return _container.get(1);
+        return _deque.get(1);
     }
 
     public T get_t()
     {
-        return _container.getLast();
+        return _deque.get(_deque.size() - 1);
     }
 
     public T get_t_minus1()
     {
-        return _container.get(_container.size() - 2);
+        return _deque.get(_deque.size() - 2);
     }
 
     @Override
     public String toString()
     {
-        return _container.toString();
+        return _deque.toString();
+    }
+
+    public void clear()
+    {
+        _deque.clear();
+    }
+
+    public boolean isEmpty()
+    {
+        return _deque.isEmpty();
+    }
+
+    public int size()
+    {
+        return _deque.size();
+    }
+
+    public T get(int index)
+    {
+        return _deque.get(index);
     }
 }
